Bug 40214 - [i965] assign instead of compare src/mesa/drivers/dri/i965/brw_vec4_emit.cpp:274
Summary: [i965] assign instead of compare src/mesa/drivers/dri/i965/brw_vec4_emit.cpp:274
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-18 18:55 UTC by Vinson Lee
Modified: 2011-11-05 22:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2011-08-18 18:55:01 UTC
mesa: ccecc08f79afc020c8c0acface04a8e53e3a7c32 (master)

This is from a Coverity defect report.

src/mesa/drivers/dri/i965/brw_vec4_emit.cpp
   268  static void
   269  check_gen6_math_src_arg(struct brw_reg src)
   270  {
   271     /* Source swizzles are ignored. */
   272     assert(!src.abs);
   273     assert(!src.negate);
-> 274     assert(src.dw1.bits.swizzle = BRW_SWIZZLE_XYZW);
   275  }
Comment 1 Chris Wilson 2011-09-30 13:51:52 UTC
commit 8ccbcda5c64a8bea47f6b41d46bf015ba8e515fc
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Sep 30 21:48:18 2011 +0100

    i965/gen6: Fix assign instead of compare in assert
    
    This is from a Coverity defect report.
    
    src/mesa/drivers/dri/i965/brw_vec4_emit.cpp
       268  static void
       269  check_gen6_math_src_arg(struct brw_reg src)
       270  {
       271     /* Source swizzles are ignored. */
       272     assert(!src.abs);
       273     assert(!src.negate);
    -> 274     assert(src.dw1.bits.swizzle = BRW_SWIZZLE_XYZW);
       275  }
    
    Reported-by: Vinson Lee <vlee@vmware.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=40214
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 Vinson Lee 2011-11-05 22:45:21 UTC
mesa: adb7f1351e4c231184a6355573c01c7780135342 (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.